添加了@color/primary作为app的主色调

--- a/app/src/main/res/drawable/activity_home_page_searchbar_background.xml
+++ b/app/src/main/res/drawable/activity_home_page_searchbar_background.xml
@@ -4,7 +4,7 @@
     <corners android:radius="25dp" />
     <stroke
         android:width="5dp"
-        android:color="#FDE40E" />
+        android:color="@color/primary" />
     <size
         android:width="500dp"
         android:height="50dp" />
