--- a/app/src/main/res/drawable/activity_home_page_searchbutton_background.xml
+++ b/app/src/main/res/drawable/activity_home_page_searchbutton_background.xml
@@ -5,5 +5,5 @@
     <size
         android:width="100dp"
         android:height="50dp" />
-    <solid android:color="#FDE40E" />
+    <solid android:color="@color/primary" />
 </shape>
