--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="primary">#27E3D0</color>
+<!--    <color name="primary">#27E3D0</color>-->
+    <color name="primary">#FEE50F</color>
 </resources>
