--- a/app/src/main/res/layout/activity_home_page_navigationbar.xml
+++ b/app/src/main/res/layout/activity_home_page_navigationbar.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_gravity="bottom">
-
+    android:layout_gravity="bottom"
+    android:background="@color/white"
+    android:gravity="center_vertical">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -22,10 +23,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/app_name_ch" />
+            android:text="@string/app_name_cn"
+            android:textSize="12sp" />
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="60dp"
@@ -60,7 +61,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/userPageButtonName_ch" />
+            android:text="@string/userPageButtonName_cn"
+            android:textSize="12sp" />
 
     </LinearLayout>
 </LinearLayout>
