将圆角图片移至Component作为通用组件

--- a/app/src/main/res/layout/activity_home_page_goodlist_item.xml
+++ b/app/src/main/res/layout/activity_home_page_goodlist_item.xml
@@ -46,7 +46,7 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <com.demo.sweetfish.ui.homePage.RoundImageView
+        <com.demo.sweetfish.ui.component.RoundImageView
             android:id="@+id/SellerAvatarImage"
             android:layout_width="16dp"
             android:layout_height="16dp"
