“我发布的”，“我卖出的”，“我买到的”三个页面以及跳转的添加

--- a/app/src/main/res/layout/activity_home_page_userpageview.xml
+++ b/app/src/main/res/layout/activity_home_page_userpageview.xml
@@ -12,16 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FEFEFE"
+        android:gravity="center|start"
         android:orientation="horizontal"
         android:padding="10dp">
 
         <com.demo.sweetfish.ui.component.RoundImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/activity_home_page_userpageview_avatartestpic"
+            android:src="@mipmap/ic_launcher"
             app:radius="40dp" />
 
         <TextView
+            android:id="@+id/HomePageUserPageViewUserNameText"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
@@ -30,6 +32,13 @@
             android:textColor="@color/black"
             android:textSize="25sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:scaleX="-1"
+            android:scaleY="1"
+            android:src="@drawable/arrow_left" />
 
     </LinearLayout>
 
@@ -141,39 +150,29 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:gravity="center">
 
-                <Button
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:backgroundTint="@color/primary" />
+                <LinearLayout
+                    android:id="@+id/HomePageUserPageViewMyPublishButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/activity_home_page_userpageview_mypublish" />
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/activity_home_page_userpageview_publish"
+                        android:scaleX="0.8"
+                        android:scaleY="0.8" />
 
-            </LinearLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="@string/activity_home_page_userpageview_mypublish" />
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <Button
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:backgroundTint="@color/primary" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/activity_home_page_userpageview_mysold" />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -181,19 +180,59 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:gravity="center">
 
-                <Button
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:backgroundTint="@color/primary" />
+                <LinearLayout
+                    android:id="@+id/HomePageUserPageViewMySoldButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/activity_home_page_userpageview_mybought" />
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/activity_home_page_userpageview_sold"
+                        android:scaleX="0.8"
+                        android:scaleY="0.8" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="@string/activity_home_page_userpageview_mysold" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <LinearLayout
+                    android:id="@+id/HomePageUserPageViewMyBoughtButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/activity_home_page_userpageview_bought"
+                        android:scaleX="0.8"
+                        android:scaleY="0.8" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="@string/activity_home_page_userpageview_mybought" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
