忘记把TagLayout组件的特殊属性上传了

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,4 +3,7 @@
     <declare-styleable name="RoundImageView">
         <attr name="radius" format="dimension" />
     </declare-styleable>
+    <declare-styleable name="TagLayout">
+        <attr name="item" format="reference" />
+    </declare-styleable>
 </resources>
