--- a/app/src/main/res/layout/activity_search_page.xml
+++ b/app/src/main/res/layout/activity_search_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,6 +12,7 @@
         android:layout_marginVertical="5dp">
 
         <ImageView
+            android:id="@+id/SearchPageReturnButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/arrow_left" />
@@ -75,15 +77,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="10dp">
+        android:layout_marginVertical="10dp"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="猜你可能在找"
+            android:text="历史记录"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+        <com.demo.sweetfish.ui.component.TagLayout
+            android:id="@+id/SearchPageHistoryTagLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="10dp"
+            app:item="@layout/activity_search_page_history_taglayout_item"
+            app:itemSpacing="10dp"
+            app:lineSpacing="5dp" />
 
     </LinearLayout>
 
