--- a/app/src/main/res/layout/activity_home_page_homepageview.xml
+++ b/app/src/main/res/layout/activity_home_page_homepageview.xml
@@ -9,10 +9,53 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <com.demo.sweetfish.ui.homePage.HomePageSearchBar
+        <LinearLayout
+            android:id="@+id/HomePageSearchBar"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_height="50dp"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:background="@drawable/activity_home_page_searchbar_background"
+                android:gravity="center">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="2dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginEnd="2dp"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/SearchContent_EditText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:layout_weight="1"
+                        android:background="@null"
+                        android:gravity="center_vertical"
+                        android:text="电动车 | 双肩包"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/SearchButton_Button"
+                        android:layout_width="70dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/activity_home_page_searchbutton_background"
+                        android:gravity="center"
+                        android:text="搜索"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="50dp"
@@ -31,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/infomationPageButtonName_cn"
-                android:textSize="12sp"/>
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
 
