--- a/app/src/main/res/layout/activity_home_page_homepageview.xml
+++ b/app/src/main/res/layout/activity_home_page_homepageview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -7,7 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:baselineAligned="false">
 
         <LinearLayout
             android:id="@+id/HomePageSearchBar"
@@ -78,9 +80,11 @@
         </LinearLayout>
     </LinearLayout>
 
-    <com.demo.sweetfish.ui.homePage.HomePageGoodsList
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/HomePageGoodsList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:itemCount="10"
+        tools:listitem="@layout/activity_home_page_goodlist_item" />
 
 </LinearLayout>
