对大部分需要显示登录用户信息的页面进行了用户数据显示逻辑的完善

--- a/app/src/main/res/layout/activity_home_page_userpageview.xml
+++ b/app/src/main/res/layout/activity_home_page_userpageview.xml
@@ -17,8 +17,10 @@
         android:padding="10dp">
 
         <com.demo.sweetfish.ui.component.RoundImageView
+            android:id="@+id/HomePageUserPageViewUserAvatarImageView"
             android:layout_width="80dp"
             android:layout_height="80dp"
+            android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher"
             app:radius="40dp" />
 
