--- a/app/src/main/res/layout/activity_personal_user_page.xml
+++ b/app/src/main/res/layout/activity_personal_user_page.xml
@@ -23,9 +23,9 @@
                     android:layout_height="150dp">
 
                     <ImageView
+                        android:id="@+id/UserPageUserBackgroundImageView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:alpha="0.5"
                         android:scaleType="centerCrop"
                         android:src="@drawable/ic_launcher_background" />
 
@@ -54,6 +54,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="0"
+                                android:textColor="@color/black"
                                 android:textSize="20sp"
                                 android:textStyle="bold" />
 
@@ -76,6 +77,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="0"
+                                android:textColor="@color/black"
                                 android:textSize="20sp"
                                 android:textStyle="bold" />
 
@@ -100,7 +102,7 @@
                             android:paddingVertical="5dp"
                             android:text="@string/activity_personal_user_page_edit"
                             android:textColor="@color/black"
-                            android:textSize="20sp"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
                     </LinearLayout>
@@ -113,31 +115,37 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/UserPageUserNameTextViewMain"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="用户名称"
                             android:textColor="@color/black"
-                            android:textSize="25sp"
+                            android:textSize="24sp"
                             android:textStyle="bold" />
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:id="@+id/UserPageUserDescribeTextView"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:text="个人简介"
                             android:textColor="@color/black" />
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:id="@+id/UserPageUserSexTextView"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
+                            android:lines="1"
                             android:text="性别"
                             android:textColor="@color/black" />
 
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:id="@+id/UserPageUserIdTextView"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
+                            android:lines="1"
                             android:text="用户ID"
                             android:textColor="@color/black" />
 
@@ -173,10 +181,12 @@
             </LinearLayout>
 
             <com.demo.sweetfish.ui.component.RoundImageView
+                android:id="@+id/UserPageUserAvatarImageViewMain"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="120dp"
+                android:scaleType="centerCrop"
                 android:src="@mipmap/ic_launcher"
                 app:radius="50dp" />
 
@@ -188,7 +198,8 @@
         android:id="@+id/UserPageTopNavigationBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/UserPageNavigationBarReturnButton"
@@ -201,42 +212,39 @@
             android:src="@drawable/arrow_left" />
 
         <com.demo.sweetfish.ui.component.RoundImageView
+            android:id="@+id/UserPageUserAvatarImageViewTopNavigation"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
             android:layout_marginHorizontal="10dp"
+            android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            android:id="@+id/UserPageUserNameTextViewTopNavigation"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:lines="1"
             android:text="用户名称"
             android:textColor="@color/black"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="end|center">
-
-            <TextView
-                android:id="@+id/PersonalUserPageEditInfoButton1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:background="@drawable/activity_home_page_searchbutton_background"
-                android:backgroundTint="#F0F0F0"
-                android:gravity="center"
-                android:paddingHorizontal="18dp"
-                android:paddingVertical="5dp"
-                android:text="@string/activity_personal_user_page_edit"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/PersonalUserPageEditInfoButton1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="20dp"
+            android:background="@drawable/activity_home_page_searchbutton_background"
+            android:backgroundTint="#F0F0F0"
+            android:paddingHorizontal="18dp"
+            android:paddingVertical="5dp"
+            android:text="@string/activity_personal_user_page_edit"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
